--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.13"
 tokio = { version = "1", features = ["full"] }
+rand = "0.8"
+uuid = { version = "1.2", features = ["v4"] }
