--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.13"
 tokio = { version = "1", features = ["full"] }
 rand = "0.8"
 uuid = { version = "1.2", features = ["v4"] }
+dotenv = "0.15"
