Refactor .vscode/settings.json to add new words to cSpell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
     "axohtml",
+    "mousedown",
     "moviefinder",
     "serde",
     "stylesheet",
     "themoviedb",
-    "tmdb"
+    "tmdb",
+    "touchstart"
   ]
 }
