--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+tokio-postgres = "0.7.12"
