Add spinner_page module and integrate spinner component into feed controls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,12 @@
     "tmdb",
     "touchstart",
     "vals"
-  ]
+  ],
+
+  "tailwindCSS.includeLanguages": {
+    "rs": "html"
+  },
+  "[rs]": {
+    "tailwindCSS.experimental.classRegex": ["\\class\\(\"([^\"]*)\"\\)"]
+  }
 }
