--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 tokio-postgres = "0.7.12"
 futures = "0.3"
+
+[profile.dev]
+incremental = true
