Add v2 session wrapping and response writer; refactor header trait for improved clarity

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
     "nanos",
     "onclick",
     "posix",
+    "Reswap",
+    "retarget",
     "serde",
     "stylesheet",
     "swiperslidechange",
