Refactor database configuration and error handling: remove .env.dev, update Justfile for local environment, enhance Postgres connection error handling, and adjust context initialization in main and fixture files.

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://moviefinder-app:moviefinder-app@localhost:5435/moviefinder-app?sslmode=disable"
 STAGE="development"
+PORT=3000
