Refactor list module structure by consolidating List and ListItem definitions, updating ListDb and ListItemDb interfaces, and removing deprecated files for improved organization and clarity.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,9 +18,13 @@
     "mousedown",
     "moviefinder",
     "nanos",
+    "ngrok",
     "onclick",
+    "pointerdown",
+    "pointerup",
     "popstate",
     "posix",
+    "psql",
     "Reswap",
     "retarget",
     "serde",
