Update environment configuration with new API tokens; modify schema.sql to adjust version column type; refactor ctx.rs to remove redundant conditions; enhance env.rs for clearer stage loading.

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,7 @@
+STAGE=local
 DATABASE_URL="postgresql://moviefinder-app:moviefinder-app@localhost:5435/moviefinder-app?sslmode=disable"
 PORT=3000
+TMDB_API_READ_ACCESS_TOKEN=noop
+TWILIO_ACCOUNT_SID=noop
+TWILIO_AUTH_TOKEN=noop
+TWILIO_SERVICE_SID=noop
